<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="play"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_play"
        android:shortcutShortLabel="@string/shortcut_play_short"
        android:shortcutLongLabel="@string/shortcut_play_long">
        <intent
            android:action="com.rawsmusic.shortcut.PLAY"
            android:targetPackage="com.rawsmusic"
            android:targetClass="com.rawsmusic.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.rawsmusic.shortcut.SEARCH"
            android:targetPackage="com.rawsmusic"
            android:targetClass="com.rawsmusic.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shuffle"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_shuffle"
        android:shortcutShortLabel="@string/shortcut_shuffle_short"
        android:shortcutLongLabel="@string/shortcut_shuffle_long">
        <intent
            android:action="com.rawsmusic.shortcut.SHUFFLE"
            android:targetPackage="com.rawsmusic"
            android:targetClass="com.rawsmusic.MainActivity" />
    </shortcut>
</shortcuts>
